--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,10 @@ p {
     font-size: 20px;
 }
 
+#missao {
+    font-size: 20px;
+}
+
 h1 {
     background: #CCCCCC;
     text-align: center;
@@ -16,3 +20,4 @@ h1 {
 em strong {
     color: #FF0000;
 }
+
