--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,17 @@
 body {
-    background-color: #CCCCCC;
+    
 }
 
 #banner {
     width: 100%;
+}
+
+.principal {
+    background-color: #CCCCCC;
+}
+
+h1 {
+    text-align: center;
 }
 
 p {
@@ -15,15 +23,26 @@ p {
     font-size: 20px;
 }
 
-h1 {
-    text-align: center;
-    height: 150px;
-    border: 10px solid #000000;
-    padding-top: 20px;
-    margin: 40px;
-}
-
 em strong {
     color: #FF0000;
 }
 
+.itens {
+    font-style: italic;
+}
+
+.beneficios {
+    background-color: #FFFFFF;
+}
+
+h2 {
+    text-align: center;
+}
+
+ul {
+    display: inline-block;
+}
+
+.imagembeneficios {
+    width: 50%;
+}
