--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,7 @@ body {
 
 .principal {
     background-color: #CCCCCC;
+    padding: 30px;
 }
 
 h1 {
@@ -33,6 +34,7 @@ em strong {
 
 .beneficios {
     background-color: #FFFFFF;
+    padding: 20px;
 }
 
 h2 {
@@ -41,6 +43,9 @@ h2 {
 
 ul {
     display: inline-block;
+    vertical-align: top;
+    width: 20%;
+    margin-right: 15%;
 }
 
 .imagembeneficios {
