--- a/styles/style.css
+++ b/styles/style.css
@@ -11,13 +11,16 @@ body {
     padding: 30px;
 }
 
-h1 {
+.titulo-principal {
+    padding-left: 20px;
+}
+
+.titulo-centralizado {
     text-align: center;
 }
 
 p {
     text-align: center;
-    font-size: 20px;
 }
 
 #missao {
@@ -35,10 +38,6 @@ em strong {
 .beneficios {
     background-color: #FFFFFF;
     padding: 20px;
-}
-
-h2 {
-    text-align: center;
 }
 
 ul {
