--- a/styles/produtos.css
+++ b/styles/produtos.css
@@ -78,3 +78,8 @@ nav a:hover {
 .produto-descricao {
     font-size: 18px;
 }
+
+footer {
+    text-align: center;
+    background-color: #CCCCCC;
+}
