--- a/styles/produtos.css
+++ b/styles/produtos.css
@@ -81,5 +81,12 @@ nav a:hover {
 
 footer {
     text-align: center;
-    background-color: #CCCCCC;
+    background: url("/img/bg.jpg");
+    padding: 40px 0;
+}
+
+.copyright {
+    color: #FFFFFF;
+    font-size: 13px;
+    margin: 20px;
 }
