--- a/styles/style.css
+++ b/styles/style.css
@@ -95,11 +95,6 @@ footer {
     margin: 20px;
 }
 
-main {
-    width: 940px;
-    margin: 0 auto;
-}
-
 form {
     margin: 40px 0;
 }
@@ -166,6 +161,13 @@ td, th {
     clear: left;
 }
 
+.principal {
+    padding: 3m 0;
+    background-color: #FEFEFE;
+    width: 940px;
+    margin: 0 auto;
+}
+
 .principal p {
     margin: 0 0 1em;
 }
@@ -186,6 +188,12 @@ td, th {
 
 .mapa {
     padding: 3em 0;
+    background: linear-gradient(#FEFEFE,#888888);
+}
+
+.mapa-conteudo {
+    width: 940px;
+    margin: 0 auto;
 }
 
 .mapa p {
@@ -195,6 +203,7 @@ td, th {
 
 .beneficios {
     padding: 3em 0;
+    background-color: #888888;
 }
 
 .conteudo-beneficios {
@@ -214,6 +223,10 @@ td, th {
 
 .itens:first-child {
     font-weight: bold;
+}
+
+.itens::before {
+    content: "\2605";
 }
 
 .imagem-beneficios {
